--- a/MMurals/Views/Base.lproj/LaunchScreen.storyboard
+++ b/MMurals/Views/Base.lproj/LaunchScreen.storyboard
@@ -18,8 +18,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ButtonsMurals" translatesAutoresizingMaskIntoConstraints="NO" id="vMC-0F-ocw">
-                                <rect key="frame" x="-49" y="192" width="512" height="512"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoMMurals" translatesAutoresizingMaskIntoConstraints="NO" id="vMC-0F-ocw">
+                                <rect key="frame" x="7" y="248" width="400" height="400"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="400" id="iBr-Cw-3Ip"/>
+                                    <constraint firstAttribute="width" constant="400" id="mis-lD-nva"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.58823529409999997" green="0.1215686275" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -36,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ButtonsMurals" width="512" height="512"/>
+        <image name="logoMMurals" width="512" height="512"/>
     </resources>
 </document>
